test/library/standard/Reflection/getFieldRef-type.3.good
getFieldRef-type.chpl:20: error: cannot return a reference to 'type' field 'x'
